src/components/HorizontalScroll/horizontal-scroll.scss
@import '../../stylesheets/variables';

.horizontal-scroll {
  .top-border {
    margin: 0;
  }

  .left-button {
    color: $dark-grey;
    margin: 0.65rem 0 0.4rem 0;
    border: none;
    position: absolute;
    background-color: $sfi-white;
    text-align: center;
    padding: 10px;
    cursor: pointer;
  }

  .left-button-default {
    display: none;
  }

  .right-button {
    color: $dark-grey;
    margin: -3.1rem 0 0 0;
    display: none;
    border: none;
    float: right;
    background-color: $sfi-white;
    text-align: center;
    padding: 10px;
    cursor: pointer;
  }

  @media only screen and (max-width: 768px) {
    .right-button {
      display: grid;
    }
  }

  .scroll_container {
    display: flex;
    overflow-x: auto;
    margin: 0 2.188rem 0 2.188rem;

    .title {
      padding: 1.25rem 0 0 0;
      min-width: max-content;
    }

    a {
      text-decoration: none;
    }

    .skin_option {
      padding: 1.25rem 1.5rem;
      min-width: max-content;
      font-weight: 900;
      margin: 0;
    }
  }

  hr {
    color: solid $philippine-silver;
    height: 1px;
    margin: 0 2.188rem 0 2.188rem;
    border-top: none;
  }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.scroll_container::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scroll_container {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

